--- a/requirements2.txt
+++ b/requirements2.txt
@@ -3,7 +3,6 @@ aiohttp==3.9.1
 aiokafka==0.8.1
 aiosignal==1.3.1
 alembic==1.8.1
-altair==5.3.0
 ansible-compat==4.1.5
 ansible-core==2.15.2
 ansible-lint==6.17.2
@@ -27,7 +26,6 @@ charset-normalizer==3.2.0
 click==8.1.3
 click-params==0.3.0
 cloudpickle==2.2.1
-colorlog==6.8.2
 comm==0.2.0
 contourpy==1.2.0
 cryptography==41.0.3
@@ -69,8 +67,7 @@ jsonschema==4.18.6
 jsonschema-specifications==2023.7.1
 jupyterlab-widgets==3.0.9
 kafka-python==2.0.2
-kiwisolver==1.4.5
-lightgbm==4.3.0
+kiwisolver==1.4.
 Mako==1.3.0
 Markdown==3.5.1
 markdown-it-py==3.0.0
@@ -83,9 +80,7 @@ mlserver==1.3.5
 mlserver-mlflow==1.3.5
 multidict==6.0.4
 mypy-extensions==1.0.0
-numpy==1.26.4
 oauthlib==3.2.2
-optuna==3.5.0
 orjson==3.8.14
 packaging==23.1
 pandas==2.1.3
@@ -105,7 +100,6 @@ py-grpc-prometheus==0.7.0
 pyarrow==12.0.1
 pycparser==2.21
 pydantic==1.10.13
-pydeck==0.9.0
 Pygments==2.16.1
 PyJWT==2.7.0
 PyMySQL==1.0.3
@@ -137,15 +131,9 @@ sqlparse==0.4.4
 stack-data==0.6.3
 starlette==0.22.0
 starlette-exporter==0.17.1
-streamlit==1.33.0
 subprocess-tee==0.4.1
 tabulate==0.9.0
-tenacity==8.2.3
 threadpoolctl==3.2.0
-toml==0.10.2
-toolz==0.12.1
-tornado==6.4
-tqdm==4.66.2
 traitlets==5.14.0
 tritonclient==2.36.0
 typing_extensions==4.8.0
